--- a/p1.html
+++ b/p1.html
@@ -3,8 +3,16 @@
 <title>this is document title</title>
 </head>
 <body>
-<h1>this is heading </h1>
-<p>document content goes here.........</p>
+                                <h1>this is heading </h1> <align="centre">
+				<h2>this is heading </h2>
+				<h3>this is heading </h3>
+<br   />
+				<h4>this is heading </h4>
+				<h5>this is heading </h5>
+				<h6>this is heading </h6>
+<p> 				<del>pawan kalyan the one and</del> only<b> true leader of andhra </b>pradesh is now <i>starting his 26th film(official remake of pink) </i> <ins> ram charan and ntr together working on a project RRR directed by SSrajamouli</ins> <small> ajay devgan joined the project</small>
+<big><q>
+rrr</big></q>x<sub>r</sub>r<sup>x</sup> <address align="centre"> ramcharan s/o srinivas</address></p>
 </body>
 </html>
 
