--- a/frames.html
+++ b/frames.html
@@ -2,6 +2,17 @@
 <head>
 <title>HTML Frames</title>
 </head>
+<frameset rows="60%,20%,20%">
+<frameset cols="60%,20%,20%"rows="50%,20%,30%">
+<frame src="/home/Sem6B8/20171cse0547/images.html"/>
+<frame src="/home/Sem6B8/20171cse0547/tables.html"/>
+<frame src="/home/Sem6B8/20171cse0547/task.html"/>
+</frameset>
+<frameset cols="60%,20%,20%"rows="50%,20%,30%">
+<frame src="/home/Sem6B8/20171cse0547/images.html"/>
+<frame src="/home/Sem6B8/20171cse0547/tables.html"/>
+<frame src="/home/Sem6B8/20171cse0547/task.html"/>
+</frameset>
 <frameset cols="60%,20%,20%"rows="50%,20%,30%">
 <frame src="/home/Sem6B8/20171cse0547/images.html"/>
 <frame src="/home/Sem6B8/20171cse0547/tables.html"/>
