--- a/resume.html
+++ b/resume.html
@@ -3,9 +3,10 @@
 <title>Resume Using HTML</title>
 </head>
 <body style="background-color:yellow">
-<h1 align="center">Ram Charan</h1>
-<p align="left"><b>Emailid:</b>charanchowdary2205@gmail.com</p>
-<p align="right"><b>PhoneNumber:</b>9390676888</p>
+<h1>Ram Charan 
+<img src="/home/Sem6B8/Desktop/index.jpeg" style="float:right;width:120px;height:120px;"></h1>
+<p><b>Emailid:</b>charanchowdary2205@gmail.com</p>
+<p><b>PhoneNumber:</b>9390676888</p>
 <hr></hr>
 <h2 align="left">CV Highlights</h2>
 <ul>
@@ -87,6 +88,36 @@
 <hr></hr>
 <h3 align="left">Technical Skils</h3>
 <ul>
+<li style="color:red">Operating Systems:<span style="color:black">Dcs,windows 9k,windows2000</span></li>
+<li style="color:red">application software:<span style="color:black">offfice 9T-2000;officexp,office 2000</span></li>
+<li style="color:red">programming skills:<span style="color:black">HTML,Css,python,java script,learning c&c++</span></li>
+</ul>
+<hr></hr>
+<h3>Certification/Awards</h3>
+<ul>
+<li><b>Second highest in ACCA PI-Governance,Risk&Ethucs exam</b>-june 2002 at manipal hospital</li>
+<li><b>INterwied by ACCA for "international ACCA student in UX",</b>interview published in ACCA student Accountant Magazine</li>
+</ul>
+<hr>
+</hr>
+<h3>Personal Information</h3>
+<ul>
+<li>A young,Determined hand and execution
+</li>
+<li>Languages KNown:English,hindi,Telugu,Tamil</li>
+</ul>
+<hr></hr>
+<h3>Other Information</h3>
+<ul>
+<li>Expected salary as per company standards.</li>
+<li>Area of work:Software Development,programming.</li>
+</ul>
+<hr></hr>
+<h3>Declaration</h3>
+<p>I here by declare that the details flurished shows are true and corrrect to head of my knowledge and belief.</p>
+</body>
+</html>
+
 
 
 
